<resources>
    <string name="app_name">Plantastic</string>

    <string name="welcome_to_">
        Welcome \n  to \nPlantastic!
    </string>
    <string name="go">Go!</string>
    <string name="add_a_plant">Add a plant</string>
    <string name="encyclopedia_title">encyclopedia</string>
    <string name="plant_name">plant name</string>
    <string name="settings_page">Settings page</string>
    <string name="seaded">Settings</string>
    <string name="tere">Hello!</string>
    <string name="lemmikud">Favorites</string>
    <string name="no_favorites_yet">No favorite plants yet</string>
    <string name="selected_plant_image">Selected plant image</string>
    <string name="add_photo">Add photo</string>
    <string name="nickname_label">Nickname:</string>
    <string name="enter_nickname">Enter plant nickname</string>
    <string name="common_name_label">Common name</string>
    <string name="edit_plant">Edit plant</string>
    <string name="delete_plant">Delete plant</string>
    <string name="water_indicator">Water indicator</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="open_encyclopedia">Encyclopedia</string>
    <string name="type_label">Type:</string>
    <string name="enter_species">Enter plant species</string>
    <string name="description_label">Description (optional):</string>
    <string name="enter_description">Enter description (optional)</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="minu_taim">My plant</string>
    <string name="ents_klopeedia">Encyclopedia</string>
    <string name="common_name">Common Name</string>
    <string name="scientific_name">scientific name</string>
    <string name="description_goes_here">Description goes here…</string>
    <string name="care_level">care level</string>
    <string name="medium">medium</string>
    <string name="toxic_to_pets">toxic to pets</string>
    <string name="no">no</string>
    <string name="sunlight_requirement">sunlight requirement</string>
    <string name="water_requirement">water requirement</string>
    <string name="teie_taimed_on_hoolitsetud">Your plants are taken care of!</string>
    <string name="hiljem">Later</string>
    <string name="today">Today</string>
    <string name="back">Back</string>
    <string name="kasta">Water</string>
    <string name="muuta">Edit</string>
    <string name="hooldusajalugu">Care History</string>
    <string name="t_p">Type</string>
    <string name="kuup_ev">Date</string>
    <string name="aeg">Time</string>
    <string name="minu_taimed">My plants</string>
    <string name="lisa_taim">Add a plant</string>
    <string name="teated">Notifications</string>
    <string name="teatiste_lubamine">Allow notifications</string>
    <string name="meenutada_kastmist">Remind me to water</string>
    <string name="_08_00">08:00</string>
    <string name="_22_00">22:00</string>
    <string name="backbutton">backButton</string>
    <string name="sun_icon">sun_icon</string>
    <string name="this_week">This week</string>
    <string name="toggle">toggle</string>
</resources>